prevent newlines if name too long on CharacterCard

--- a/frontend/src/app/css/character_card.css
+++ b/frontend/src/app/css/character_card.css
@@ -54,4 +54,10 @@
     padding: 0.5rem;
     font-size: 1.1rem;
     font-weight: bold;
+    width: 90%;
+
+    /* Truncate name if too long */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
